add grid styling

--- a/src/assets/scss/mixin/_buttonMixin.scss
+++ b/src/assets/scss/mixin/_buttonMixin.scss
@@ -16,6 +16,11 @@
       background-color: #1e448c;
       color: #ffff;
     }
+
+    &--danger {
+      background-color: #ed5554;
+      color: #ffff;
+    }
     
     &--secondary {
       color: #333;
