--- a/src/components/VueBased/ButtonNds/style.scss
+++ b/src/components/VueBased/ButtonNds/style.scss
@@ -1,43 +1,1 @@
-.btn-nds {
-  font-family: 'Nunito Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  font-weight: 700;
-  border: 0;
-  cursor: pointer;
-  display: inline-block;
-  line-height: 1;
-  border-radius: 3px;
-
-  &:hover{
-    opacity: 0.6;
-    transition: 0.9s;
-  }
-
-  &--primary {
-    background-color: #1e448c;
-    color: #ffff;
-  }
-  
-  &--secondary {
-    color: #333;
-    background-color: transparent;
-    box-shadow: rgba(0, 0, 0, 0.15) 0px 0px 0px 1px inset;
-  }
-  
-  &--small {
-    font-size: 12px;
-    padding: 10px 16px;
-  }
-  
-  &--medium {
-    font-size: 14px;
-    padding: 11px 20px;
-  }
-  
-  &--large {
-    font-size: 16px;
-    padding: 12px 24px;
-  }
-}
-
-
-
+@import "../../../assets/scss/mixin/buttonMixin"
