--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -4,4 +4,5 @@
 @import 'modules/color';
 @import 'modules/dialog';
 @import 'modules/form';
+@import 'modules/card';
 @import 'modules/notification';
