--- a/src/assets/scss/modules/_color.scss
+++ b/src/assets/scss/modules/_color.scss
@@ -1,6 +1,6 @@
 .container-color {
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     gap: 4rem;
   
     .color-box {
